abstract interface class Thing {
  double get weight;

  set weight(double w);
}

  /// 프로퍼티를 지원하지 않는 언어면 메소트 새로 생성하면 됨
  // void weight(double weight;
  // double weight();